--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,22 @@
   body {
     @apply overflow-x-hidden font-primary text-primary;
   }
+  .loader {
+    width: 100%;
+    height: 300px;
+    background: linear-gradient(0.25turn, transparent, #fff, transparent),
+      linear-gradient(#ddd, #ddd), linear-gradient(#ddd, #ddd),
+      linear-gradient(#ddd, #ddd);
+    background-color: #fff;
+    background-repeat: no-repeat;
+    background-size: 100% 100%, 100% 130px, 30% 15px, 50% 15px;
+    background-position: -300px 0, 0 0, 15px 150px, 15px 180px;
+    animation: loading 1.5s 5;
+  }
+}
+
+@keyframes loading {
+  to {
+    background-position: 300px 0, 0 0, 15px 150px, 15px 180px;
+  }
 }
